--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,8 @@
 .home{
   border: 0px solid white;
   height: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
