--- a/styles/globals.module.css
+++ b/styles/globals.module.css
@@ -4,10 +4,10 @@
   color: inherit;
   text-decoration: none;
 }
-
-.all {
+/* 
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-}
+} */
