--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,6 +1,6 @@
 .header{
   font-weight: 300;
-  height: 50px;
+  height: 58px;
   display: flex;
   flex: 1;
   align-items: center;
@@ -20,19 +20,18 @@
 }
 
 .search{
-  padding: 10px 0;
+  padding: 5px 0;
 }
 
 .containerInputSearch{
-  border: 1px solid var(--nextui-colors-lightBorder);
-  border-radius: 20px;
 }
 
 
 .containerInputSearch .input{
   border: 0;
-  padding: 4px 10px;
+  padding: 2px 10px;
   border-radius: 50px;
+  font-size: 22px;
 }
 
 .controls{
@@ -46,7 +45,7 @@
   color: var(--nextui-colors-primaryText);
   border-radius: 50px;
   width: 30px;
-  height: 30px;
+  height: 36px;
   display: flex;
   align-items: center;
   justify-content: center;
